@@ -3,6 +3,7 @@
 ENHANCEMENTS:
 * Make bar wedge-shaped to make it easier to tell which direction is 0 vs 1
 * Use user colors in bar
+* Use accelerometer in tablet mode; otherwise, use keyboard
 
 21
 
